--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -20,5 +20,12 @@
         android:layout_centerInParent="true"
         android:src="@mipmap/ic_launcher"
         />
+    <Button
+        android:id="@+id/open_camrea"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="打开摄像头"
+        android:layout_toRightOf="@id/covGray"
+        />
 
 </RelativeLayout>
