--- a/app/src/main/res/menu/menu_camrea_view.xml
+++ b/app/src/main/res/menu/menu_camrea_view.xml
@@ -5,4 +5,5 @@
 <item android:id="@+id/sobel" android:title="@string/sobel"/>
 <item android:id="@+id/boxblue" android:title="@string/boxblue"/>
 <item android:id="@+id/origin" android:title="@string/origin"/>
+<item android:id="@+id/face_detect" android:title="@string/face_detect"/>
 </menu>
